refactor: update scribe docs
